--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,19 +1,21 @@
+body {
+     background-color: #fdd;
+ }
+
 #content {
   margin-left: auto;
   margin-right: auto;
   width: 650px;
 }
 
-#greeting-container {
-  margin-top: 20px;
-}
- body {
-     background-color: #ffdbdb;
- }
-
-img {
+#selfie {
   display: block;
   margin-left: auto;
   margin-right: auto;
   height: 500px;
 }
+
+#greeting-container {
+  margin-top: 20px;
+}
+
