--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -13,6 +13,10 @@ body {
   color: #766;
 }
 
+#content h1 {
+  text-align: center;
+ }
+
 #selfie {
   display: block;
   height: 500px;
@@ -34,10 +38,13 @@ body {
 }
 
 #sidebar a {
-  color: #988;
   padding: 10px 15px;
 }
 
-#sidebar a:hover {
+a {
+  color: #988;
+}
+
+a:hover {
   color: lightgray;
 }
