--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -74,10 +74,9 @@ th {
   height: 500px;
 }
 
-#gallery img:hover {
-    opacity: 70%;
+img:hover {
+  opacity: 70%;
 }
-
-.desc {
-    text-align: center;
+.patterns {
+  height: 500px;
 }
