--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -24,6 +24,10 @@ h1 {
   margin-top: 20px;
 }
 
+#hello-container {
+  margin-top: 20px;
+}
+
 #caption-container {
   left: 50px;
   position: fixed;
